--- a/src/App.css
+++ b/src/App.css
@@ -50,3 +50,13 @@ code {
     transform: rotate(360deg);
   }
 }
+
+.BeersHome {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: large;
+  padding: 30px;
+}
